--- a/site/public/404.html
+++ b/site/public/404.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>
-        &lt;!-- Blocks may include default content. -->
-        Ghign0 web3 website
-        </title>
-</head>
-<body>
-
-
-    <article class="center cf pv5 measure-wide-l">
-      <h1>
-        This is not the page you were looking for
-      </h1>
-    </article>
-
-
-
-
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url=https://ghign0.eth" />
